fixd cutoff caused by fixed navbar using padding

--- a/css/index.css
+++ b/css/index.css
@@ -3,3 +3,9 @@ body {
   background-color: #1D2744;
   color: #4490AB;
 }
+#home,
+#AboutMe,
+#Hobbies,
+#Footer {
+  padding-top: 65px;
+}
