--- a/less/general-styles.less
+++ b/less/general-styles.less
@@ -2,3 +2,7 @@ html, body {
     background-color: @cloud-burst;
     color: @steel-blue;
 }
+
+#home, #AboutMe, #Hobbies, #Footer {
+    padding-top: 65px;
+}
